lib_LIBRARIES = libcommon.a

libcommon_a_SOURCES = \
	\
	basic-block.c \
	basic-block.h \
	\
	node.c \
	node.h \
	\
	ctree.c \
	ctree.h \
	\
	BasicBlock.cc \
	BasicBlock.h \
	\
	Context.cc \
	Context.h \
	\
	Node.cc \
	Node.h \
	\
	Tree.cc \
	Tree.h \
	\
	Wrapper.cc \
	Wrapper.h

AM_CFLAGS = $(LLVM_CFLAGS)
AM_CXXFLAGS = $(LLVM_CXXFLAGS)
AM_CPPFLAGS = @M2S_INCLUDES@

