if HAVE_M32_FLAG

lib_LTLIBRARIES = $(top_builddir)/lib/libm2s-opengl.la

__top_builddir__lib_libm2s_opengl_la_LDFLAGS = -version-info 1:0:0

__top_builddir__lib_libm2s_opengl_la_SOURCES = \
	\
	vertex-spec.c \
	vertex-spec.h \
	\
	api.c \
	api.h \
	\
	buffer.c \
	buffer.h \
	\
	context.c \
	context.h \
	\
	debug.c \
	debug.h \
	\
	linked-list.c \
	linked-list.h \
	\
	list.c \
	list.h \
	\
	mhandle.c \
	mhandle.h \
	\
	misc.c \
	misc.h \
	\
	opengl.c \
	opengl.h \
	\
	program.c \
	program.h \
	\
	shader.c \
	shader.h \
	\
	string.c \
	string.h \
	\
	texture.c \
	texture.h \
	\
	vertex-array.c \
	vertex-array.h 

AM_CFLAGS = -m32

endif

