lib_LIBRARIES = libdram.a

libdram_a_SOURCES = \
	action.c\
	action.h\
	\
	bank.c \
	bank.h \
	\
	command.c \
	command.h \
	\
	controller.c \
	controller.h \
	\
	dram.c \
	dram.h \
	\
	dram-system.c \
	dram-system.h \
	\
	file-accessor.c \
	file-accessor.h \
	\
	rank.c \
	rank.h \
	\
	request.c \
	request.h

AM_CPPFLAGS = @M2S_INCLUDES@

