lib_LIBRARIES = libdram.a

libdram_a_SOURCES = \
	action.c\
	action.h\
	\
	bank.c \
	bank.h \
	\
	command.c \
	command.h \
	\
	controller.c \
	controller.h \
	\
	dram.c \
	dram.h \
	\
	dram-system.c \
	dram-system.h \
	\
	file-accessor.c \
	file-accessor.h \
	\
	rank.c \
	rank.h \
	\
	request.c \
	request.h \
	\
	Action.cc \
	Action.h \
	\
	Address.cc \
	Address.h \
	\
	Bank.cc \
	Bank.h \
	\
	Channel.cc \
	Channel.h \
	\
	Command.cc \
	Command.h \
	\
	Controller.cc \
	Controller.h \
	\
	Rank.cc \
	Rank.h \
	\
	Request.cc \
	Request.h \
	\
	Scheduler.cc \
	Scheduler.h \
	\
	System.cc \
	System.h \
	\
	TimingParameters.cc \
	TimingParameters.h

AM_CPPFLAGS = @M2S_INCLUDES@

