lib_LIBRARIES = libdram.a

libdram_a_SOURCES = \
	\
	Address.cc \
	Address.h \
	\
	Bank.cc \
	Bank.h \
	\
	Channel.cc \
	Channel.h \
	\
	Command.cc \
	Command.h \
	\
	Controller.cc \
	Controller.h \
	\
	Rank.cc \
	Rank.h \
	\
	Request.cc \
	Request.h \
	\
	Scheduler.cc \
	Scheduler.h \
	\
	System.cc \
	System.h \
	\
	TimingParameters.cc \
	TimingParameters.h

AM_CPPFLAGS = @M2S_INCLUDES@

