lib_LIBRARIES = libcachesystem.a
libcachesystem_a_SOURCES = cachesystem.h \
	cachesystem.c

INCLUDES = -I$(top_srcdir)/src/libstruct \
	-I$(top_srcdir)/src/libmhandle \
	-I$(top_srcdir)/src/libnetwork \
	-I$(top_srcdir)/src/libopt \
	-I$(top_srcdir)/src/libmemsystem \
	-I$(top_srcdir)/src/libesim \
	-I$(top_srcdir)/src/libmisc

